# AIbox

./: .gitignore  README.md  pyproject.toml  quickstart.ipynb  readme.md
Linear-Model-Selection/: RegressionModelSelection.ipynb
LinearModelSelectionAndRegularization/: RegressionModelSelection.ipynb
Machine Learning/: StatisticsToNetwork.ipynb
Optimization/: Oprimization.md  PyObject.md  functions_optimization.ipynb  optimization_showcase.ipynb
Optimization/technology/: StatLab.md
Optimization/technology/base_libraries/: Pandas.md  scikit-learn.md  statsmodels.md
Pipelines/: ClassificationPipeline1.ipynb  Regression pipeline 2.ipynb  Regression pipelines.ipynb  Regression_pipelines.md
ResamplingMethods/: Bootstrap.ipynb
Research/: knowledge_distilation.ipynb
SVM/: svm-intoduction.ipynb
StatLab/: Classification.ipynb  StatLab.md
Tree methods/: Boosting.ipynb
box/: scalers.py
